results/SVCOMP/specgen/log-ExSymExeLCMP-2024_03_07_01_49_01.txt
class Main {

  //@ requires x > 0 && y > 0;
  //@ ensures \result == false;
  public static boolean f(long x) {
    Main inst = new Main();
    return inst.test(x, 5);
  }

  //@ requires x > 0 && y > 0;
  //@ ensures \result == false;
  public boolean test(long x, long y) {

    long res = x;
    if (res + 1 > res + 2) {
      return false;
    } else
      System.out.println("x <=0");
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeLCMP.java:3: error: cannot find symbol
  //@ requires x > 0 && y > 0;
                        ^
  symbol:   variable y
  location: class Main
1 error

class Main {

  //@ requires x > 0 && y > 0;
  //@ ensures \result == false;
  public static boolean f(long x) {
    Main inst = new Main();
    return inst.test(x, 5);
  }

  //@ requires x > 0 && y > 0;
  //@ ensures \result == false;
  public boolean test(long x, long y) {

    long res = x;
    if (res + 1 > res + 2) {
      return false;
    } else
      System.out.println("x <=0");
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeLCMP.java:3: error: cannot find symbol
  //@ requires x > 0 && y > 0;
                        ^
  symbol:   variable y
  location: class Main
1 error

class Main {

  //@ requires x > 0;
  //@ requires y > 0;
  //@ ensures \result == false;
  public static boolean f(long x) {
    Main inst = new Main();
    return inst.test(x, 5);
  }

  //@ requires x > 0;
  //@ requires y > 0;
  //@ ensures \result == false;
  public boolean test(long x, long y) {

    long res = x;
    if (res + 1 > res + 2) {
      return false;
    } else
      System.out.println("x <=0");
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeLCMP.java:4: error: cannot find symbol
  //@ requires y > 0;
               ^
  symbol:   variable y
  location: class Main
1 error

class Main {

  //@ requires x > 0;
  //@ requires y > 0;
  //@ ensures \result == false;
  public static boolean f(long x) {
    Main inst = new Main();
    return inst.test(x, 5);
  }

  //@ requires x > 0;
  //@ requires y > 0;
  //@ ensures \result == false;
  public boolean test(long x, long y) {

    long res = x;
    if (res + 1 > res + 2) {
      return false;
    } else
      System.out.println("x <=0");
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeLCMP.java:4: error: cannot find symbol
  //@ requires y > 0;
               ^
  symbol:   variable y
  location: class Main
1 error

class Main {

  //@ requires x > 0;
  //@ requires y > 0;
  //@ ensures \result == false;
  public static boolean f(long x) {
    Main inst = new Main();
    return inst.test(x, 5);
  }

  //@ requires x > 0;
  //@ requires y > 0;
  //@ ensures \result == false;
  public boolean test(long x, long y) {

    long res = x;
    if (res + 1 > res + 2) {
      return false;
    } else
      System.out.println("x <=0");
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeLCMP.java:4: error: cannot find symbol
  //@ requires y > 0;
               ^
  symbol:   variable y
  location: class Main
1 error

class Main {

  //@ requires x > 0;
  //@ requires y > 0;
  //@ ensures \result == false;
  public static boolean f(long x) {
    Main inst = new Main();
    return inst.test(x, 5);
  }

  //@ requires x > 0;
  //@ requires y > 0;
  //@ ensures \result == false;
  public boolean test(long x, long y) {

    long res = x;
    if (res + 1 > res + 2) {
      return false;
    } else
      System.out.println("x <=0");
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeLCMP.java:4: error: cannot find symbol
  //@ requires y > 0;
               ^
  symbol:   variable y
  location: class Main
1 error

class Main {

  //@ requires x > 0;
  //@ ensures \result == false;
  public static boolean f(long x) {
    Main inst = new Main();
    return inst.test(x, 5);
  }

  //@ requires x > 0;
  //@ ensures \result == false;
  public boolean test(long x, long y) {

    long res = x;
    if (res + 1 > res + 2) {
      return false;
    } else
      System.out.println("x <=0");
    return true;
  }
}
